--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  profiles:
+    active: default
+
   application:
     name: auth-service
 
@@ -8,3 +11,10 @@ spring:
     token:
       access-expiration-time: 3600000
       refresh-expiration-time: 86400000
+
+  config:
+    import: optional:configserver:http://localhost:9000
+
+  cloud:
+    config:
+      label: main
