--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
   </dependencies>
 
   <build>
+    <finalName>auth</finalName>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
