--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,9 @@ spring:
 gateway:
   url: http://localhost:8000
 
+redis:
+  host: localhost
+  port: 6379
 ---
 spring:
   config:
@@ -37,3 +40,12 @@ spring:
       on-profile: dev
 
     import: optional:configserver:http://55g-config-dev:9050
+---
+spring:
+  config:
+    activate:
+      on-profile: docker
+
+redis:
+  host: redis-dev
+  port: 6379
