--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>3.3.5</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
-  <groupId>shop.S5G</groupId>
+  <groupId>shop.s5g</groupId>
   <artifactId>auth</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>auth</name>
